2003-08-02  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/87.xml, opt/160.xml, driver/lj5gray, driver/lj5mono: Added
	  Brother HL-5040.

	* opt/56.xml: Excluded Brother HL-5040, as it uses the
	  opt/Brother-MediaType.xml option instead of this one.

	* opt/Brother-MediaType.xml: Added "MediaType" option for Brother
	  laser printers.

	* pxlmono-PrinterResolution.xml, opt/pxlmono-PrintoutMode.xml:
	  Made 1200 dpi available for Brother´s PCL-6 printers.

	* opt/159.xml: Removed all constraints concerning the "pxlmono"
	  and "pxlcolor" drivers. This option does not serve for these
	  drivers any more. Allowed 1200 dpi for Brother printers and the
	  "lj5gray"/"lj5mono" drivers. This resolution gives correct
	  output.

2003-08-01  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/pxlmono-JCLResolution.xml, opt/pxlmono-GSResolution.xml,
	  opt/pxlmono-PrinterResolution.xml, opt/pxlmono-PrintoutMode.xml:
	  Made the resolution option for the "pxlmono"/"pxlcolor" drivers
	  a forced composite option which both controls a switch on the
	  GhostScript comman line and inserts a PJL command. Added
	  "QualityType" PJL option to "PrintoutMode".

	* opt/183.xml, opt/184.xml, opt/PJL-PJLBinding.xml,
	  opt/PJL-PJLDuplex.xml, opt/PJL-Duplex.xml: Put the "SET DUPLEX"
	  and "SET BINDING" PJL options together with a forced composite
	  option to have a "Duplex" option with the three standard choices
	  (Off, Long Edge, Short Edge).

	* opt/87.xml: More convenient choice names for "Economode" option:
	  "On"/"Off" instead of "Standard"/"Economy".

	* opt/91.xml, opt/127.xml: Renamed "HPLJDensity" to "TonerDensity"
	  also non-HP printers have this option).

	* opt/95.xml: Turn Duplex off by default, as printing with CUPS
	  on a non-Duplex printer with Duplex turned on sometimes leads
	  to a trailing blank page.

	* driver/pxlmono.xml: Text updated.

	* driver/hl1250.xml: Removed "<nopjl />" tag, now JCL options can