@@ -101,7 +101,16 @@
    <id>printer/Brother-HL-3400CN</id>
   </printer>
   <printer>
+   <id>printer/Brother-HL-5030</id>
+  </printer>
+  <printer>
    <id>printer/Brother-HL-5040</id>
+  </printer>
+  <printer>
+   <id>printer/Brother-HL-5050</id>
+  </printer>
+  <printer>
+   <id>printer/Brother-HL-5070N</id>
   </printer>
   <printer>
    <id>printer/Brother-DCP-1200</id><!-- Brother DCP-1200 -->
