@@ -29,7 +29,16 @@
    <id>printer/Generic-PCL_6_PCL_XL_Printer</id>
   </printer>
   <printer>
+   <id>printer/Brother-HL-5030</id>
+  </printer>
+  <printer>
    <id>printer/Brother-HL-5040</id>
+  </printer>
+  <printer>
+   <id>printer/Brother-HL-5050</id>
+  </printer>
+  <printer>
+   <id>printer/Brother-HL-5070N</id>
   </printer>
   <printer>
    <id>printer/Canon-LBP-1000</id><!-- Canon LBP-1000 -->
