@@ -97,7 +97,25 @@
    </comments>
   </printer>
   <printer>
+   <id>printer/Brother-HL-5030</id><!-- Brother HL-5030 -->
+   <comments>
+    <en>300 or 600dpi PCL driver.</en>
+   </comments>
+  </printer>
+  <printer>
    <id>printer/Brother-HL-5040</id><!-- Brother HL-5040 -->
+   <comments>
+    <en>300 or 600dpi PCL driver.</en>
+   </comments>
+  </printer>
+  <printer>
+   <id>printer/Brother-HL-5050</id><!-- Brother HL-5050 -->
+   <comments>
+    <en>300 or 600dpi PCL driver.</en>
+   </comments>
+  </printer>
+  <printer>
+   <id>printer/Brother-HL-5070N</id><!-- Brother HL-5070N -->
    <comments>
     <en>300 or 600dpi PCL driver.</en>
    </comments>
