@@ -64,7 +64,16 @@
    <id>printer/Brother-HL-3400CN</id>
   </printer>
   <printer>
+   <id>printer/Brother-HL-5030</id>
+  </printer>
+  <printer>
    <id>printer/Brother-HL-5040</id>
+  </printer>
+  <printer>
+   <id>printer/Brother-HL-5050</id>
+  </printer>
+  <printer>
+   <id>printer/Brother-HL-5070N</id>
   </printer>
   <printer>
    <id>printer/Canon-LBP-1000</id><!-- Canon LBP-1000 -->
