@@ -109,7 +109,22 @@
      </constraint>
      <constraint sense="false">
       <make>Brother</make>
+      <model>HL-5030</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Brother</make>
       <model>HL-5040</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Brother</make>
+      <model>HL-5050</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Brother</make>
+      <model>HL-5070N</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
