@@ -21,7 +21,22 @@
      </constraint>
      <constraint sense="false">
       <make>Brother</make>
+      <model>HL-5030</model>
+      <driver>hl1250</driver>
+     </constraint>
+     <constraint sense="false">
+      <make>Brother</make>
       <model>HL-5040</model>
+      <driver>hl1250</driver>
+     </constraint>
+     <constraint sense="false">
+      <make>Brother</make>
+      <model>HL-5050</model>
+      <driver>hl1250</driver>
+     </constraint>
+     <constraint sense="false">
+      <make>Brother</make>
+      <model>HL-5070N</model>
       <driver>hl1250</driver>
      </constraint>
   </constraints>
