@@ -17,12 +17,42 @@
   <constraints>
      <constraint sense="true">
       <make>Brother</make>
+      <model>HL-5030</model>
+      <arg_defval>ev/680</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Brother</make>
+      <model>HL-5030</model>
+      <driver>hl1250</driver>
+     </constraint>
+     <constraint sense="true">
+      <make>Brother</make>
       <model>HL-5040</model>
       <arg_defval>ev/680</arg_defval>
      </constraint>
      <constraint sense="false">
       <make>Brother</make>
       <model>HL-5040</model>
+      <driver>hl1250</driver>
+     </constraint>
+     <constraint sense="true">
+      <make>Brother</make>
+      <model>HL-5050</model>
+      <arg_defval>ev/680</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Brother</make>
+      <model>HL-5050</model>
+      <driver>hl1250</driver>
+     </constraint>
+     <constraint sense="true">
+      <make>Brother</make>
+      <model>HL-5070N</model>
+      <arg_defval>ev/680</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Brother</make>
+      <model>HL-5070N</model>
       <driver>hl1250</driver>
      </constraint>
      <constraint sense="true">
