@@ -17,7 +17,22 @@
   <constraints>
      <constraint sense="true">
       <make>Brother</make>
+      <model>HL-5030</model>
+      <arg_defval>ev/Brother-MediaType-Plain</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>Brother</make>
       <model>HL-5040</model>
+      <arg_defval>ev/Brother-MediaType-Plain</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>Brother</make>
+      <model>HL-5050</model>
+      <arg_defval>ev/Brother-MediaType-Plain</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>Brother</make>
+      <model>HL-5070N</model>
       <arg_defval>ev/Brother-MediaType-Plain</arg_defval>
      </constraint>
   </constraints>
