@@ -1,6 +1,6 @@
-<printer id="printer/Brother-HL-5040">
+<printer id="printer/Brother-HL-5030">
   <make>Brother</make>
-  <model>HL-5040</model>
+  <model>HL-5030</model>
   <mechanism>
     <laser/><!--not "color"-->
     <resolution>
@@ -36,7 +36,7 @@
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism>
-  <url>http://www.brother.com/usa/printer/info/hl5040/hl5040_ove.html</url>
+  <url>http://solutions.brother.com/linux/</url>
   <lang>
     <pcl level="6"/>
     <pjl/>
@@ -45,12 +45,6 @@
     </text>
   </lang>
   <autodetect>
-    <general>
-      <ieee1284>MFG:Brother;CMD:PJL,PCL,PCLXL;MDL:HL-5040 series;CLS:PRINTER;</ieee1284>
-      <manufacturer>Brother</manufacturer>
-      <model>HL-5040 series</model>
-      <commandset>PJL,PCL,PCLXL</commandset>
-    </general>
   </autodetect>
   <functionality>A</functionality>
   
@@ -60,19 +54,13 @@
   <comments>
     <en>
 
-    16 pages per minute, PCL 5e and PCL 6, 8 MB (136 MB max.), one
-    tray for 250 sheets (max A4/Legal, a second tray can be added),
-    parallel, USB 2.0.&lt;p&gt;
+    PCL 5e and PCL 6, simolar to &lt;a
+    href="show_printer.cgi?recnum=Brother-HL-5040"&gt;Brother
+    HL-5040&lt;/a&gt;.&lt;p&gt;
 
-    Highest resolution with "pxlmono" (PCL 6) seems to be 1200x1200
-    dpi, but complicated graphics (especially with bitmaps) is very
-    slow, full-page bitmaps in 1200 dpi can even make the printer
-    hang, usual documents (as e-mail from Mozilla) come out
-    quickly.&lt;p&gt;
-
-    "hl1250", the PCL-5e driver prints up to 1200x600 dpi. Much faster
-    on bitmap graphics. In general, very fast with all
-    documents.&lt;p&gt;
+    For driver recommendations see the page of the &lt;a
+    href="show_printer.cgi?recnum=Brother-HL-5040"&gt;Brother
+    HL-5040&lt;/a&gt;.&lt;p&gt;
 
     Brother provides a &lt;a
     href="http://solutions.brother.com/linux/"&gt;driver&lt;/a&gt;,
@@ -81,9 +69,6 @@
     driver. "pxlmono", "gimp-print" (600 dpi), and "hpijs" (600 dpi)
     give a better grayscale quality and all special features of the
     printer are accessible by PJL commands.&lt;p&gt;
-
-    There is no manual in the box, you find it as PDF file on the CD
-    with the Windows/Mac drivers.&lt;p&gt;
 
     </en>
   </comments>
