@@ -1,5 +1,13 @@
 2003-08-02  Till Kamppeter <till.kamppeter@gmx.net>
 
+
+	* printer/Brother-HL-5030.xml, printer/Brother-HL-5050.xml,
+	  printer/Brother-HL-5070N.xml, driver/hl1250.xml,
+	  driver/pxlmono.xml, driver/lj5gray.xml, driver/lj5mono,
+	  driver/ljet4.xml, opt/160.xml, opt/56.xml, opt/87.xml,
+	  opt/Brother-MediaType.xml: Added Brother HL-5030, HL-5050,
+	  HL-5070N.
+
 	* opt/87.xml, opt/160.xml, driver/lj5gray, driver/lj5mono: Added
 	  Brother HL-5040.
 
